[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
alloy = { version = "0.3", features = ["full", "node-bindings"] }
eyre = "0.6.12"
jsonrpsee = { version = "0.18", features = ["server", "client"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.128"
rocksdb = "0.22.0"
anyhow = "1.0.89"
async-trait = "0.1.68"
tokio-util = "0.7.12"